--- a/app/src/main/res/layout/activity_budget.xml
+++ b/app/src/main/res/layout/activity_budget.xml
@@ -39,7 +39,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="6dp"
                 android:background="@color/dashboardItem"
-                android:backgroundTint="@color/dashboardItem"
+                android:backgroundTint="@color/floatingBtnColor"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
@@ -50,8 +50,8 @@
                 android:layout_height="35dp"
                 android:layout_marginStart="126dp"
                 android:layout_marginTop="6dp"
-                android:background="@color/green"
-                android:backgroundTint="@color/dashboardItem"
+                android:background="#000000"
+                android:backgroundTint="@color/floatingBtnColor"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.859"
                 app:layout_constraintStart_toEndOf="@+id/textView12"
@@ -73,6 +73,7 @@
                 android:id="@+id/budgetname"
                 android:layout_width="305dp"
                 android:layout_height="42dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:ems="10"
                 android:inputType="text"
@@ -88,7 +89,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="28dp"
-                android:text="Amount"
+                android:text="Target Amount"
                 android:textColor="#000000"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -99,6 +100,7 @@
                 android:id="@+id/targetAmount"
                 android:layout_width="305dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:ems="10"
                 android:hint="Amount"
