--- a/app/src/main/res/layout/activity_saving.xml
+++ b/app/src/main/res/layout/activity_saving.xml
@@ -38,7 +38,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="6dp"
                 android:background="#FFFFFF"
-                android:backgroundTint="#000000"
+                android:backgroundTint="@color/floatingBtnColor"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
@@ -48,7 +48,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="126dp"
-                android:backgroundTint="#000000"
+                android:backgroundTint="@color/floatingBtnColor"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.962"
                 app:layout_constraintStart_toEndOf="@+id/textView12"
