--- a/app/src/main/res/layout/fragment_saving.xml
+++ b/app/src/main/res/layout/fragment_saving.xml
@@ -17,7 +17,7 @@
                 android:id="@+id/cancelBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/dashboardItem"
+                android:backgroundTint="@color/floatingBtnColor"
                 android:foregroundTint="#FFFFFF"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -41,7 +41,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="90dp"
-                android:backgroundTint="#FFFFFF"
+                android:backgroundTint="@color/floatingBtnColor"
                 app:layout_constraintStart_toEndOf="@+id/textView20"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/baseline_delete_24" />
@@ -51,7 +51,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="1dp"
-                android:backgroundTint="@color/dashboardItem"
+                android:backgroundTint="@color/floatingBtnColor"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toEndOf="@+id/dltSavingBtn"
