--- a/app/src/main/res/layout/addsaveddialog.xml
+++ b/app/src/main/res/layout/addsaveddialog.xml
@@ -43,6 +43,7 @@
                 android:id="@+id/insertBtn"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:backgroundTint="@color/floatingBtnColor"
                 android:text="Insert"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
